Fixed an issue with fixed bgr on mobile

--- a/css/screen.css
+++ b/css/screen.css
@@ -309,7 +309,6 @@ a:hover, a:focus, a:active {
 .site-header-wrapper {
   background-color: #202020;
   color: white;
-  position: fixed;
   top: 0;
   width: 100%;
   z-index: 2;
@@ -457,7 +456,6 @@ h1.title a {
 /* =Prelude
 -------------------------------------------------------------- */
 .prelude-wrapper {
-  background-attachment: fixed;
   background-image: url(../img/intro-bgr.jpg);
   background-position: center;
   background-size: cover;
@@ -465,6 +463,7 @@ h1.title a {
 }
 @media (min-width: 620px) {
   .prelude-wrapper {
+    background-attachment: fixed;
     height: 420px;
   }
 }
