--- a/sass/bits/_header.scss
+++ b/sass/bits/_header.scss
@@ -16,7 +16,6 @@
 	@extend .hide-for-small;
 	background-color: $black;
 	color: $white;
-	position: fixed;
 	top: 0;
 	width: 100%;
 	z-index: 2;
@@ -173,13 +172,13 @@ h1.title {
 -------------------------------------------------------------- */
 
 .prelude-wrapper {
-	background-attachment: fixed;
 	background-image: url(../img/intro-bgr.jpg);
 	background-position: center;
 	background-size: cover;
 	height: 320px;
 
 	@include at-breakpoint($medium) {
+		background-attachment: fixed;
 		height: 420px;
 	}
 
